[gd_scene load_steps=20 format=3 uid="uid://bh2qccxff6xj5"]

[ext_resource type="Script" uid="uid://dxqhkjjkaisfo" path="res://day1/create_drinks/create_drinks.gd" id="1_exp5l"]
[ext_resource type="Texture2D" uid="uid://pvg8v8xqr186" path="res://day1/assets/table.png" id="1_qdlxd"]
[ext_resource type="Texture2D" uid="uid://dbkh45bf4gry6" path="res://day1/assets/fridge.png" id="2_s4vca"]
[ext_resource type="Texture2D" uid="uid://ca08r5no5xkjj" path="res://day1/assets/fridge_open.png" id="3_s4vca"]
[ext_resource type="Texture2D" uid="uid://bbgevha82ypxy" path="res://day1/assets/milk.png" id="4_bhymv"]
[ext_resource type="Texture2D" uid="uid://b4jlbxj8rnj5s" path="res://day1/assets/shelf.png" id="4_fe7e7"]
[ext_resource type="Texture2D" uid="uid://dcjgi1m6ceg70" path="res://day1/assets/mug.png" id="5_1beu8"]
[ext_resource type="Texture2D" uid="uid://uvinusujovcr" path="res://day1/assets/coffee-machine-animation.png" id="6_df05t"]
[ext_resource type="Texture2D" uid="uid://c5oo1317u1k31" path="res://day1/assets/coffee-filled-milk.png" id="8_exp5l"]
[ext_resource type="Texture2D" uid="uid://d6slu0rtkhoh" path="res://day1/assets/coffee.png" id="9_k5u1t"]
[ext_resource type="Texture2D" uid="uid://dltw4atc3donf" path="res://day1/assets/done.png" id="11_k5u1t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1beu8"]
size = Vector2(217, 280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgmq7"]
size = Vector2(120.36986, 227.93216)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2apu"]
size = Vector2(32.31476, 34.449448)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_df05t"]
size = Vector2(61, 102.5)

[sub_resource type="Animation" id="Animation_3q4gr"]
resource_name = "brew"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.1, 0.16666667, 0.23333333, 0.3, 0.36519402, 0.4, 0.43333334, 0.46666667, 0.5430687),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0]
}

[sub_resource type="Animation" id="Animation_38fp6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhymv"]
_data = {
&"RESET": SubResource("Animation_38fp6"),
&"brew": SubResource("Animation_3q4gr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63pht"]
size = Vector2(41, 29)

[node name="create_drinks" type="Node2D"]
script = ExtResource("1_exp5l")

[node name="table" type="TextureRect" parent="."]
offset_top = 136.0
offset_right = 1152.0
offset_bottom = 592.0
texture = ExtResource("1_qdlxd")

[node name="fridge" type="Node2D" parent="."]
position = Vector2(56, 88)

[node name="Sprite2D" type="Sprite2D" parent="fridge"]
position = Vector2(252.00003, 291.99997)
scale = Vector2(1.9062501, 2.2812498)
texture = ExtResource("2_s4vca")

[node name="Area2D" type="Area2D" parent="fridge"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="fridge/Area2D"]
position = Vector2(247.5, 364)
shape = SubResource("RectangleShape2D_1beu8")

[node name="fridgeOpen" type="Node2D" parent="."]
visible = false
position = Vector2(56, 88)

[node name="Sprite2D" type="Sprite2D" parent="fridgeOpen"]
position = Vector2(246.00003, 292)
scale = Vector2(2.015625, 2.28125)
texture = ExtResource("3_s4vca")

[node name="Area2D" type="Area2D" parent="fridgeOpen"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="fridgeOpen/Area2D"]
position = Vector2(60, 381)
rotation = -0.02443461
shape = SubResource("RectangleShape2D_vgmq7")

[node name="milk" type="Node2D" parent="fridgeOpen"]
position = Vector2(-16, 11)

[node name="Sprite2D" type="Sprite2D" parent="fridgeOpen/milk"]
position = Vector2(329, 314)
scale = Vector2(1.6557617, 2.0859373)
texture = ExtResource("4_bhymv")

[node name="Area2D" type="Area2D" parent="fridgeOpen/milk"]
position = Vector2(312.00003, 313.99997)
scale = Vector2(1.6474609, 2.0859373)

[node name="CollisionShape2D" type="CollisionShape2D" parent="fridgeOpen/milk/Area2D"]
position = Vector2(2.6594086, 20.614243)
scale = Vector2(1, 1.0000002)
shape = SubResource("RectangleShape2D_d2apu")

[node name="coffeeMachine" type="Node2D" parent="."]

[node name="mugTarget" type="Marker2D" parent="coffeeMachine"]
position = Vector2(548, 263)

[node name="Sprite2D" type="Sprite2D" parent="coffeeMachine"]
position = Vector2(592, 384)
texture = ExtResource("6_df05t")
hframes = 10

[node name="Area2D" type="Area2D" parent="coffeeMachine"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coffeeMachine/Area2D"]
position = Vector2(584, 380.75)
shape = SubResource("RectangleShape2D_df05t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="coffeeMachine"]
libraries = {
&"": SubResource("AnimationLibrary_bhymv")
}

[node name="shelf" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 688.0
offset_top = -16.0
offset_right = 1216.0
offset_bottom = 472.0
texture = ExtResource("4_fe7e7")

[node name="mug1" type="Node2D" parent="shelf"]
position = Vector2(176, 176)

[node name="Sprite2D" type="Sprite2D" parent="shelf/mug1"]
position = Vector2(52, 127)
texture = ExtResource("5_1beu8")

[node name="Area2D" type="Area2D" parent="shelf/mug1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shelf/mug1/Area2D"]
position = Vector2(45.5, 147.5)
shape = SubResource("RectangleShape2D_63pht")

[node name="coffee" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(688, 399)
texture = ExtResource("9_k5u1t")

[node name="coffeeAndMilk" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(688, 399)
texture = ExtResource("8_exp5l")

[node name="doneButton" type="Button" parent="."]
offset_left = 1053.0
offset_top = 19.0
offset_right = 1122.0
offset_bottom = 89.0
flat = true

[node name="done" type="TextureRect" parent="doneButton"]
layout_mode = 0
offset_left = -102.0
offset_top = -83.0
offset_right = 154.0
offset_bottom = 173.0
texture = ExtResource("11_k5u1t")

[connection signal="pressed" from="doneButton" to="." method="_on_done_button_pressed"]
